服务发现没有服务的话，不会进行生成

--- a/doc/application.yaml.example
+++ b/doc/application.yaml.example
@@ -8,7 +8,7 @@
 #   max-backups: maximum number of backup files
 # ********************
 log:
-  output: console
+  output: file
   level: debug
   max-size: 100
   max-age: 30
